Close Area crashes Blender (3.0.0 and 3.0.1) #94334

Closed
opened 2021-12-23 00:25:34 +01:00 by Orestis Konstantinidis · 19 comments

System Information
Operating system: Windows-10-10.0.19042-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 497.09

Blender Version
Broken: version: 3.0.0, branch: master, commit date: 2021-12-02 18:35, hash: f1cca30557

Short description of error
Hello,
using the new "Close Area" command causes blender to crash. At first I thought it was closing blender but it doesn't prompt for an unsaved file to be saved either.

Exact steps for others to reproduce the error
Area Close Crash.mp4
Open Blender 3.0.0. Split the viewport horizontally, and try using the Close Area command on the bottom half from the menu: View -> Area -> Close Area.
Blender will crash.

You can also view the attached video for a screen recording of the issue.

**System Information** Operating system: Windows-10-10.0.19042-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 497.09 **Blender Version** Broken: version: 3.0.0, branch: master, commit date: 2021-12-02 18:35, hash: `f1cca30557` **Short description of error** Hello, using the new "Close Area" command causes blender to crash. At first I thought it was closing blender but it doesn't prompt for an unsaved file to be saved either. **Exact steps for others to reproduce the error** [Area Close Crash.mp4](https://archive.blender.org/developer/F12772401/Area_Close_Crash.mp4) Open Blender 3.0.0. Split the viewport horizontally, and try using the Close Area command on the bottom half from the menu: View -> Area -> Close Area. Blender will crash. You can also view the attached video for a screen recording of the issue.

Added subscriber: @OrestisKonstantinidis

Added subscriber: @OrestisKonstantinidis

#95348 was marked as duplicate of this issue

#95348 was marked as duplicate of this issue

#94915 was marked as duplicate of this issue

#94915 was marked as duplicate of this issue
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can confirm this, I didn't bisect, but here's a back-trace:

do_view3d_header_buttons(bContext * C, void * UNUSED_arg, int event) (/home/hans/Blender-Git/blender/source/blender/editors/space_view3d/view3d_header.c:104)
ui_apply_but_funcs_after(bContext * C) (/home/hans/Blender-Git/blender/source/blender/editors/interface/interface_handlers.c:1052)
ui_handler_region_menu(bContext * C, const wmEvent * event, void * UNUSED_userdata) (/home/hans/Blender-Git/blender/source/blender/editors/interface/interface_handlers.c:11378)
wm_handler_ui_call(bContext * C, wmEventHandler_UI * handler, const wmEvent * event, int always_pass) (/home/hans/Blender-Git/blender/source/blender/windowmanager/intern/wm_event_system.c:688)
wm_handlers_do_intern(bContext * C, wmWindow * win, wmEvent * event, ListBase * handlers) (/home/hans/Blender-Git/blender/source/blender/windowmanager/intern/wm_event_system.c:3016)
wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) (/home/hans/Blender-Git/blender/source/blender/windowmanager/intern/wm_event_system.c:3130)
wm_event_do_handlers(bContext * C) (/home/hans/Blender-Git/blender/source/blender/windowmanager/intern/wm_event_system.c:3618)
WM_main(bContext * C) (/home/hans/Blender-Git/blender/source/blender/windowmanager/intern/wm.c:639)
main(int argc, const char ** argv) (/home/hans/Blender-Git/blender/source/creator/creator.c:561)
I can confirm this, I didn't bisect, but here's a back-trace: ``` do_view3d_header_buttons(bContext * C, void * UNUSED_arg, int event) (/home/hans/Blender-Git/blender/source/blender/editors/space_view3d/view3d_header.c:104) ui_apply_but_funcs_after(bContext * C) (/home/hans/Blender-Git/blender/source/blender/editors/interface/interface_handlers.c:1052) ui_handler_region_menu(bContext * C, const wmEvent * event, void * UNUSED_userdata) (/home/hans/Blender-Git/blender/source/blender/editors/interface/interface_handlers.c:11378) wm_handler_ui_call(bContext * C, wmEventHandler_UI * handler, const wmEvent * event, int always_pass) (/home/hans/Blender-Git/blender/source/blender/windowmanager/intern/wm_event_system.c:688) wm_handlers_do_intern(bContext * C, wmWindow * win, wmEvent * event, ListBase * handlers) (/home/hans/Blender-Git/blender/source/blender/windowmanager/intern/wm_event_system.c:3016) wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) (/home/hans/Blender-Git/blender/source/blender/windowmanager/intern/wm_event_system.c:3130) wm_event_do_handlers(bContext * C) (/home/hans/Blender-Git/blender/source/blender/windowmanager/intern/wm_event_system.c:3618) WM_main(bContext * C) (/home/hans/Blender-Git/blender/source/blender/windowmanager/intern/wm.c:639) main(int argc, const char ** argv) (/home/hans/Blender-Git/blender/source/creator/creator.c:561) ```
Member

Added subscriber: @Harley

Added subscriber: @Harley
Harley Acheson self-assigned this 2021-12-23 00:47:16 +01:00
Member

Interesting that Close runs fine if selecting it from the header menu, but crashes like this from the View / Area menu.

This dies in do_view3d_header_buttons with a null wmWindow. And that function has a comment of /* watch it: if area->win does not exist, check that when calling direct drawing routines */

Interesting that `Close` runs fine if selecting it from the header menu, but crashes like this from the View / Area menu. This dies in `do_view3d_header_buttons` with a null wmWindow. And that function has a comment of `/* watch it: if area->win does not exist, check that when calling direct drawing routines */`
Member

Just adding a note to clarify that the Split shown in the instructions above is not necessary.

This crash occurs immediately when selecting 3DViewport View / Area / Close Area. But only here. It does not happen when selecting the same item from the View menu of any other Editor, nor does it happen when selecting "Close Area" from any area's Header context menu.

Just adding a note to clarify that the Split shown in the instructions above is not necessary. This crash occurs immediately when selecting 3DViewport View / Area / Close Area. But only here. It does not happen when selecting the same item from the View menu of any other Editor, nor does it happen when selecting "Close Area" from any area's Header context menu.

This issue was referenced by 08226693cf

This issue was referenced by 08226693cfa2b18a89af91d6c3488d92820fed35
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Member

Changed status from 'Resolved' to: 'Confirmed'

Changed status from 'Resolved' to: 'Confirmed'
Member

I'm reopening this, since it's only fixed in the 3.0 branch.

I'm reopening this, since it's only fixed in the 3.0 branch.
Member

Added subscriber: @foj

Added subscriber: @foj
Member

Added subscribers: @Bleve, @PratikPB2123

Added subscribers: @Bleve, @PratikPB2123
Member

Just noting that the plan had been to only put in a simple bug fix for 3.0 - D13656: Fix #94334: 3DView View Menu Close Error, which happened, but master would get a more thorough one: D13660: Fix #94334: Area close operator crash in 3D view menu

Just noting that the plan had been to only put in a simple bug fix for 3.0 - [D13656: Fix #94334: 3DView View Menu Close Error](https://archive.blender.org/developer/D13656), which happened, but master would get a more thorough one: [D13660: Fix #94334: Area close operator crash in 3D view menu](https://archive.blender.org/developer/D13660)

This issue was referenced by 188277f951

This issue was referenced by 188277f9512f128b48335e45a7651482a2a226b7

This issue was referenced by b73d3b80fd

This issue was referenced by b73d3b80fdcb7244637d6d2a1cd83719b91c35af
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#94334
No description provided.